added some notes to project